--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,7 @@
         <ImageView
             android:id="@+id/mainLine"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:background="#f00"/>
+            android:layout_height="5dp" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
