--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,21 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+
     <ImageView
         android:id="@+id/mainBackGround"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/pointView"
-            android:textAlignment="center"
-            android:textSize="30dp"
-            android:text="000000000000000000000000"/>
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -29,5 +19,12 @@
             android:layout_width="match_parent"
             android:layout_height="5dp" />
     </LinearLayout>
+    <TextView
+        android:id="@+id/pointView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="#000"
+        android:textSize="30dp"
+        android:gravity="center_horizontal" />
 
 </android.support.constraint.ConstraintLayout>
