--- a/app/src/main/res/layout/start_activity.xml
+++ b/app/src/main/res/layout/start_activity.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="See &amp; See"
+            android:text="Tap &amp; See"
             android:textSize="40dp"
             android:textColor="#ffffff" />
     </FrameLayout>
